app/assets/stylesheets/application.css.scss
/*
 *= require_tree .
 *= require_self
 *= require jquery-ui/slider
 */

@import "bootstrap-sprockets";
@import "bootstrap";
@import "font-awesome-sprockets";
@import "font-awesome";


// Theme colors:
// Color scheme: http://www.rapidtables.com/web/color/color-scheme.htm
//     Starting hex: #A67240
$pri-clr:   white; //rgba(248,237,217,1); //beige
$sec-clr:   white; //rgba(136,164,210,1); //lt blue
$ter-clr-1: white; //rgba(231,167,159,1); //lt red
$ter-clr-2: white; //rgba(116,165,64,1); //lt green
$quat-clr:  white; //rgba(32,56,111,1); //dk blue

$pri-clr-trans:   rgba(255,255,255,.5); //rgba(248,237,217,.5); //beige
$sec-clr-trans:   rgba(136,164,210,.35); //rgba(136,164,210,.5); //lt blue
$ter-clr-1-trans: rgba(255,255,255,.5); //rgba(231,167,159,.5); //lt red
$ter-clr-2-trans: rgba(255,255,255,.5); //rgba(83,165,64,.5); //lt green
$quat-clr-trans:  rgba(32,56,111,.65); //rgba(32,56,111,.65); //dk blue

h1 {
  color: #666666;
  font-size: 4em;
}

.dark {
  color: #333333;
}

h2 {
  color: #4C4C4C;
}

h3 {
  color: #333333;
  margin: 10px inherit;
}

p, li {
  color: #222222;
}

// Don't style links inside headers
h1, h2, h3, h4, h5 {
  a {
    color: inherit;
  }
}

.unstyled-links {
  a {
    color: inherit;
    text-decoration: none;
  }
  a:hover {
    color: #337ab7;
  }
  // Except certain links (join page)
  p {
    a {
      color: #337ab7;
      text-decoration: underline;
    }
  }
}

.styled-links {
  p {
    a {
      color: #337ab7;
      text-decoration: underline;
    }
    a:hover {
    color: #337ab7;
  }
  }
}

a.unstyled-link {
  color: inherit;
  text-decoration: none;
}

a.unstyled-link:hover {
  color: #337ab7;
}

a.styled-link {
  color: #337ab7;
  text-decoration: none;
}

a.styled-link:hover {
  color: #337ab7;
  text-decoration: underline;
}


p {
  font-size: 1.1em;
}

.banner-tag {
  font-size: 1.5em;
}

.align-left {
  text-align: left;
}

.align-right {
  text-align: right;
}

.align-center {
  text-align: center;
}

.float-right {
  float: right;
}

.image-left {
  float: left;
}

.image-right {
  float: right;
}

// Template styling
html, body {
  display: block;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
}

body {
  background-color: $sec-clr-trans;
  margin-bottom: 5%;
}

.display-none {
  display: none;
}

.banner-title {
  position: relative;
  margin: 1em;
  //border: solid 2px;
  min-height: 50px;
  z-index: 2;
  padding-top: 55px;
}

.banner-title h1, p {
  text-align: center;
  color: #333333;
}

#wrapper {
  // height: 100%;
  width: 90%;
  margin-left: auto;
  margin-right: auto;
  // padding-left: 0;
  // -webkit-transition: all 0.5s ;
  // -moz-transition: all 0.5s ;
  // -o-transition: all 0.5s ;
  // transition: all 0.5s ;
}

#page_body {
  width: 100%;
  display: block;
  // padding-left: 44px;
  z-index: 1;
}

.page-body-footer-spacer {
  height: 46px;
}

// added to page_body on any page with a height greater than 400px
.overflow-hidden {
  overflow: hidden;
}

.overflowy-scroll {
  overflow-y: scroll;
}

.overflowy-scroll::-webkit-scrollbar {
  background: transparent;
  width: 18px;
}

.overflowy-scroll::-webkit-scrollbar-thumb {
  background-color: $quat-clr-trans;
  border-radius: 9px;
}

// Give me some space!
.spacing {
  margin-top: 2em;
}


.footer {
  position: fixed;
  z-index: 10;
  padding: .2em;
  width: 100%;
  bottom: 0;
  left: 0;
  background-color: $quat-clr-trans;
  p {
    text-align: right;
    color: black;
    line-height: .25em;
    span#created_by {
      font-size: .75em;
      a {
        color: black;
      }
    }
  }
}

// in-line image wrapping
.img-left-wrapped {
  float: left;
  margin: 10px;
}

.img-right-wrapped {
  float: right;
  margin: 10px;
}

// Hide the "created by" section of the footer on skinny screens
@media ( max-width: 300px ) {

}

// Shrink fonts on skinny screens
@media ( max-width: 767px ) {
  body {
    font-size: 1.25em;
  }

  h1 {
    font-size: 3em;
  }

  h2 {
    font-size: 2em;
  }

  h3 {
    font-size: 1.25em;
    margin: 5px inherit;
  }

  // .footer {
  //   background-color: $quat-clr;
  //   p {
  //     color: rgb(200,200,200);
  //   }
  // }
}

// Style the Navbar
.navbar-nav li a {
    padding-right: 4px;
    padding-left: 4px;
}

.donate-button {
  position: relative;
  float: right;
  margin-top: 7px;
  margin-right: 8px;

  a:hover {
    text-decoration: none;
  }
}

// Show different donate buttons based upon screen size
// Large screens
@media ( min-width: 768px ) {
  .navbar-header .donate-button {
    display: none;
  }
}

@media ( min-width: 890px) {
  .navbar-nav li a {
      padding-right: 12px;
      padding-left: 12px;
  }
}
// Small screens
@media (max-width: 767px) {
  .navbar-collapse .donate-button {
    display: none;
  }

  .navbar-nav li {
    font-size: 1.5em;
    text-align: center;
  }
}

